[gd_scene load_steps=8 format=3 uid="uid://djwilso1op4es"]

[ext_resource type="Script" path="res://scripts/combat/spawner/wave_spawner.gd" id="1_cuyjv"]
[ext_resource type="PackedScene" uid="uid://kd4xv22ktbk8" path="res://scenes/combat/combat_test/enemies/enemy_goblin_torch.tscn" id="2_8xuny"]
[ext_resource type="PackedScene" uid="uid://bykejfxyiftto" path="res://scenes/combat/combat_test/enemies/enemy_flying.tscn" id="3_ggnpt"]
[ext_resource type="PackedScene" uid="uid://n5j7kaoyy78x" path="res://scenes/combat/combat_test/enemies/enemy_demon_lord.tscn" id="4_awjxh"]

[sub_resource type="LabelSettings" id="LabelSettings_x4tpd"]
font_size = 43

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i5845"]
content_margin_right = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_01vh4"]
content_margin_right = 20.0

[node name="WaveSpawner" type="Node2D" node_paths=PackedStringArray("grounded_spawn_point_L", "grounded_spawn_point_R", "flying_spawn_point_L", "flying_spawn_point_R") groups=["wave_spawner"]]
script = ExtResource("1_cuyjv")
grounded_enemy_scene = ExtResource("2_8xuny")
flying_enemy_scene = ExtResource("3_ggnpt")
boss_enemy_scene = ExtResource("4_awjxh")
grounded_spawn_point_L = NodePath("SpawnPositions/Ground_Left")
grounded_spawn_point_R = NodePath("SpawnPositions/Ground_Right")
flying_spawn_point_L = NodePath("SpawnPositions/Flying_Left")
flying_spawn_point_R = NodePath("SpawnPositions/Flying_Right")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="Ground_Left" type="Node2D" parent="SpawnPositions"]

[node name="Ground_Right" type="Node2D" parent="SpawnPositions"]

[node name="Flying_Left" type="Node2D" parent="SpawnPositions"]

[node name="Flying_Right" type="Node2D" parent="SpawnPositions"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaveLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -29.5
offset_right = 113.0
offset_bottom = 29.5
grow_horizontal = 2
grow_vertical = 2
text = "WaveLabel"
label_settings = SubResource("LabelSettings_x4tpd")
horizontal_alignment = 1

[node name="WaveCountdown" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -153.0
offset_top = 25.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_i5845")
text = "Next wave in 60"
horizontal_alignment = 2

[node name="EnemyCounter" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -147.0
offset_top = 57.0
offset_bottom = 85.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_01vh4")
text = "Enemies: 100"
horizontal_alignment = 2
